// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildDirectorPrompt > renders debate prompt 1`] = `
"你现在的任务是为用户主持一场「辩论团」结构化辩论。

# 团队成员
- 正方：论证「应该」的立场，给出最强支持论据
- 反方：论证「不应该」的立场，给出最强反对论据
- 主持人：组织流程、控制时间、最终裁决
- 观察员：事后点评双方论点的强弱

# 用户提出的辩题
示例议题：是否拓展东南亚市场

# 执行要求
1. 调用 TeamCreate 创建团队（team_name = "辩论团"）
2. 用 Agent 工具 spawn 正方、反方、观察员三个子代理，把 persona 注入 system prompt
3. 按以下流程进行 2-3 轮：
   - 正方陈述 → 反方陈述
   - 反方质询正方 → 正方反驳
   - 观察员点评双方论点强弱
4. 你作为主持人（Lead）做最终裁决，给出建议立场与理由"
`;

exports[`buildDirectorPrompt > renders investment prompt 1`] = `
"你现在的任务是为用户主持一场「投资评估团」圆桌讨论。

# 团队成员
- 资深投资人：看赛道、看团队、看估值合理性
- CFO：看财务模型与现金流敏感性
- 行业专家：看竞争格局与技术壁垒
- 风控总监：看合规、法律、退出风险

# 用户提出的议题
示例议题：是否拓展东南亚市场

# 执行要求
1. 调用 TeamCreate 创建团队（team_name = "投资评估团"）
2. 为以上每位专家分别用 Agent 工具 spawn 子代理，把名字与 persona 注入到他们的 system prompt
3. 让每位专家就议题发表一轮观点（每人 200-400 字），互相点评后给出共识 / 分歧
4. 你作为主持人（Lead）整理最终决策建议，呈现给用户"
`;

exports[`buildDirectorPrompt > renders marketing prompt 1`] = `
"你现在的任务是为用户主持一场「市场营销策划团」圆桌讨论。

# 团队成员
- 品牌负责人：关注定位、调性、长期心智占领
- 内容主理人：善用故事和情绪共鸣，关注转化文案
- 增长黑客：数据驱动，关注漏斗与 ROI 实验
- 渠道经理：熟悉主流投放渠道与媒介组合

# 用户提出的议题
示例议题：是否拓展东南亚市场

# 执行要求
1. 调用 TeamCreate 创建团队（team_name = "市场营销策划团"）
2. 为以上每位专家分别用 Agent 工具 spawn 子代理，把名字与 persona 注入到他们的 system prompt
3. 让每位专家就议题发表一轮观点（每人 200-400 字），互相点评后给出共识 / 分歧
4. 你作为主持人（Lead）整理最终决策建议，呈现给用户"
`;

exports[`buildDirectorPrompt > renders negotiation prompt 1`] = `
"你现在的任务是为用户主持一场「沟通/谈判预演团」圆桌讨论。

# 团队成员
- 沟通教练：关注措辞、节奏、情绪管理
- 异议方角色：扮演对方立场，给出真实反驳
- 第三方观察：中立复盘强弱点
- 我方代表：准备主张并接受指导

# 用户提出的议题
示例议题：是否拓展东南亚市场

# 执行要求
1. 调用 TeamCreate 创建团队（team_name = "沟通/谈判预演团"）
2. 为以上每位专家分别用 Agent 工具 spawn 子代理，把名字与 persona 注入到他们的 system prompt
3. 让每位专家就议题发表一轮观点（每人 200-400 字），互相点评后给出共识 / 分歧
4. 你作为主持人（Lead）整理最终决策建议，呈现给用户"
`;

exports[`buildDirectorPrompt > renders operations prompt 1`] = `
"你现在的任务是为用户主持一场「经营决策团」圆桌讨论。

# 团队成员
- CEO：统筹全局，平衡短期收益与长期战略
- CFO：关注现金流、毛利、单位经济模型
- COO：关注执行效率、组织协同、流程瓶颈
- 数据分析师：用数字说话，拆指标、找异动归因

# 用户提出的议题
示例议题：是否拓展东南亚市场

# 执行要求
1. 调用 TeamCreate 创建团队（team_name = "经营决策团"）
2. 为以上每位专家分别用 Agent 工具 spawn 子代理，把名字与 persona 注入到他们的 system prompt
3. 让每位专家就议题发表一轮观点（每人 200-400 字），互相点评后给出共识 / 分歧
4. 你作为主持人（Lead）整理最终决策建议，呈现给用户"
`;

exports[`buildDirectorPrompt > renders retrospective prompt 1`] = `
"你现在的任务是为用户主持一场「复盘归因团」圆桌讨论。

# 团队成员
- 业务负责人：熟悉一线场景，能给具体决策上下文
- 数据分析师：拆指标、找异动归因
- HR：关注组织和人的因素
- 流程顾问：关注 SOP、协作链路的断点

# 用户提出的议题
示例议题：是否拓展东南亚市场

# 执行要求
1. 调用 TeamCreate 创建团队（team_name = "复盘归因团"）
2. 为以上每位专家分别用 Agent 工具 spawn 子代理，把名字与 persona 注入到他们的 system prompt
3. 让每位专家就议题发表一轮观点（每人 200-400 字），互相点评后给出共识 / 分歧
4. 你作为主持人（Lead）整理最终决策建议，呈现给用户"
`;

exports[`buildDirectorPrompt > renders roundtable prompt 1`] = `
"你现在的任务是为用户主持一场「圆桌讨论团」开放圆桌讨论。

# 用户提出的议题
示例议题：是否拓展东南亚市场

# 执行要求
1. 你是主持人（Lead）。先判断议题需要哪些专业视角：
   - 若用户已在议题里点名了具体角色，优先采用
   - 否则你自行召集 3-5 位合适的专家
2. 在首条回复里**明确告知用户名单**（名字 + 一句话身份），让用户知晓召集到的专家
3. 调用 TeamCreate 创建团队（team_name = "圆桌讨论团"）
4. 用 Agent 工具为每位专家 spawn 子代理，注入 name + persona
5. 让每位专家就议题发言一轮（每人 200-400 字），你串场并最终汇总观点"
`;

exports[`buildDirectorPrompt > renders strategy prompt 1`] = `
"你现在的任务是为用户主持一场「战略推演团」圆桌讨论。

# 团队成员
- 战略顾问：麦肯锡式严谨，擅长 SWOT / 五力分析
- CFO：关注 ROI、现金流、风险敞口
- 法务总监：关注合规、合同、监管风险
- CEO 教练：善于反问、暴露盲点

# 用户提出的议题
示例议题：是否拓展东南亚市场

# 执行要求
1. 调用 TeamCreate 创建团队（team_name = "战略推演团"）
2. 为以上每位专家分别用 Agent 工具 spawn 子代理，把名字与 persona 注入到他们的 system prompt
3. 让每位专家就议题发表一轮观点（每人 200-400 字），互相点评后给出共识 / 分歧
4. 你作为主持人（Lead）整理最终决策建议，呈现给用户"
`;
